added payment-service, implemented payment-domain-core